--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "i18next": "^24.0.0",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^3.0.1",
+    "immer": "^10.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.1.1",
@@ -47,5 +48,8 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.4.15"
+  },
+  "resolutions": {
+    "immer": "^10.1.1"
   }
 }
